# Example

./: angle.cpp
Image_Thresholding_Tool/: CMakeLists.txt  package.xml
Image_Thresholding_Tool/config/: bluebucket_config.txt
Image_Thresholding_Tool/include/Image_Thresholding_Tool/: thresholding_tool.h
Image_Thresholding_Tool/src/: main.cpp  thresholding_tool.cpp
Image_Thresholding_Tool/ui/: Image_Thresholding_Tool.pro  thresholding_tool.ui
mission_stack/hammerhead_control/: CMakeLists.txt  README.md  package.xml
mission_stack/hammerhead_control/include/hammerhead_control/: control.h
mission_stack/hammerhead_control/msg/: MoveCmd.msg  MoveCmds.msg
mission_stack/hammerhead_control/src/: control.cpp  main.cpp  test.cpp
mission_stack/joystick/: CMakeLists.txt  package.xml
mission_stack/joystick/include/joystick/: Teleop.h
mission_stack/joystick/src/: Teleop.cpp  main.cpp
mission_stack/path_planner/: CMakeLists.txt  package.xml
mission_stack/path_planner/include/path_planner/: AlignBin.h  BinsTask.h  BlueBinDetector.h  FindBlueBin.h  FindGate.h  GateDetector.h  PathPlanner.h  YawControl.h
mission_stack/path_planner/src/: AlignBin.cpp  BinsTask.cpp  BlueBinDetector.cpp  FindBlueBin.cpp  FindGate.cpp  GateDetector.cpp  PathPlanner.cpp  YawControl.cpp  main.cpp  qualification_task.cpp
